--- a/src/index.html
+++ b/src/index.html
@@ -1,159 +1,246 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- rels from https://favicon.io/favicon-converter/ -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
 
-  <!-- rels from https://favicon.io/favicon-converter/ -->
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-  <link rel="manifest" href="/site.webmanifest" />
+    <title>CMC MOTORS GROUP LTD</title>
+  </head>
 
-  <title>CMC MOTORS GROUP LTD</title>
-</head>
+  <body>
+    <section id="navbar-section">
+      <div class="contact-top">
+        <a href=""
+          ><img
+            src="./assets/imgs/png-clipart-red-telephone-receiver.png"
+            alt=""
+          /><span class="text-center">(+254) 125 876 423</span></a
+        >
+        <a href=""
+          ><img src="./assets/imgs/red_msg.png" alt="" /><span
+            class="text-center"
+            >cmcmotors.com</span
+          ></a
+        >
+      </div>
 
-<body>
-  <section id="navbar-section">
-    <div class="contact-top">
-      <a href=""><img src="./assets/imgs/png-clipart-red-telephone-receiver.png" alt="" /><span
-          class="text-center">(+254) 125 876 423</span></a>
-      <a href=""><img src="./assets/imgs/red_msg.png" alt="" /><span class="text-center">cmcmotors.com</span></a>
-    </div>
-
-    <div class="contact-top-social">
-      <a href=""><img src="./assets/imgs/fb_white.png" alt="" /></a>
-      <a href=""><img src="./assets/imgs/twitter_white.png" alt="" /></a>
-      <a href=""><img src="./assets/imgs/google-plus-icon-white-hd-png.png" alt="" /></a>
-      <a href=""><img src="./assets/imgs/white-linkedin-icon-png.png" alt="" /></a>
-    </div>
-    <nav id="navbar">
-      <div class="cmc-logo-country-list">
-        <div class="cmc-img-logo">
-          <img src="./assets/imgs/cmcLogo_b.png" class="logo" alt="cmcLogo" />
-        </div>
-
-        <div class="dropdown">
-          <div class="select">
-            <span class="selected">Kenya</span>
-            <div class="caret"></div>
+      <div class="contact-top-social">
+        <a href=""><img src="./assets/imgs/fb_white.png" alt="" /></a>
+        <a href=""><img src="./assets/imgs/twitter_white.png" alt="" /></a>
+        <a href=""
+          ><img src="./assets/imgs/google-plus-icon-white-hd-png.png" alt=""
+        /></a>
+        <a href=""
+          ><img src="./assets/imgs/white-linkedin-icon-png.png" alt=""
+        /></a>
+      </div>
+      <nav id="navbar">
+        <div class="cmc-logo-country-list">
+          <div class="cmc-img-logo">
+            <img src="./assets/imgs/cmcLogo_b.png" class="logo" alt="cmcLogo" />
           </div>
-          <ul class="menu">
-            <li class="active">Kenya</li>
-            <li>Uganda</li>
-            <li>Tanzania</li>
-            <li>Rwanda</li>
-          </ul>
-        </div>
-      </div>
 
-      <div class="nav-buttons">
-        <a href="#what" class="btn btn-red">GET VEHICLE QUOTE</a>
-        <a href="#what" class="btn btn-white">SHOP FOR PARTS</a>
-        <a href="#what" class="btn btn-white">AFTER SALES</a>
-      </div>
-    </nav>
-  </section>
-
-  <section id="home-section">
-    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-        <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="../src/assets/imgs/mazda_cx30_bg_image.png" class="d-block w-100" alt="mazda cx 30" />
-          <div class="carousel-caption d-none d-md-block">
-            <h2>FIND YOUR MATCH</h2>
-            <p class="land-page-button"><a href="#"> THE NEW MAZDA CX 30 </a></p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur<br />adipisicing elit.
-              Eaque, dignissimos?<br />
-              dipisicing elit. Eaque, dignissimos?
-            </p>
-            <p class="land-page-button">
-              <a href="#">
-                GET QUOTE
-              </a>
-            </p>
+          <div class="dropdown">
+            <div class="select">
+              <span class="selected">Kenya</span>
+              <div class="caret"></div>
+            </div>
+            <ul class="menu">
+              <li class="active">Kenya</li>
+              <li>Uganda</li>
+              <li>Tanzania</li>
+              <li>Rwanda</li>
+            </ul>
           </div>
         </div>
-        <div class="carousel-item">
-          <img src="../src/assets/imgs/mazda_cx30_bg_image.png" class="d-block w-100" alt="mazda cx 30" />
-          <div class="carousel-caption d-none d-md-block">
-            <h2>FIND YOUR MATCH</h2>
-            <p class="land-page-button"><a href="#"> THE NEW MAZDA CX 30 </a></p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur<br />adipisicing elit.
-              Eaque, dignissimos?<br />
-              dipisicing elit. Eaque, dignissimos?
-            </p>
-            <p class="land-page-button">
-              <a href="#">
-                GET QUOTE
-              </a>
-            </p>
+
+        <div class="nav-buttons">
+          <a href="#what" class="btn btn-red">GET VEHICLE QUOTE</a>
+          <a href="#what" class="btn btn-white">SHOP FOR PARTS</a>
+          <a href="#what" class="btn btn-white">AFTER SALES</a>
+        </div>
+      </nav>
+    </section>
+
+    <section id="home-section">
+      <div
+        id="carouselExampleCaptions"
+        class="carousel slide"
+        data-ride="carousel"
+      >
+        <ol class="carousel-indicators">
+          <li
+            data-target="#carouselExampleCaptions"
+            data-slide-to="0"
+            class="active"
+          ></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img
+              src="../src/assets/imgs/mazda_cx30_bg_image.png"
+              class="d-block w-100"
+              alt="mazda cx 30"
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h2>FIND YOUR MATCH</h2>
+              <p class="land-page-button">
+                <a href="#"> THE NEW MAZDA CX 30 </a>
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur<br />adipisicing elit.
+                Eaque, dignissimos?<br />
+                dipisicing elit. Eaque, dignissimos?
+              </p>
+              <p class="land-page-button">
+                <a href="#"> GET QUOTE </a>
+              </p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img
+              src="../src/assets/imgs/mazda_cx30_bg_image.png"
+              class="d-block w-100"
+              alt="mazda cx 30"
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h2>FIND YOUR MATCH</h2>
+              <p class="land-page-button">
+                <a href="#"> THE NEW MAZDA CX 30 </a>
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur<br />adipisicing elit.
+                Eaque, dignissimos?<br />
+                dipisicing elit. Eaque, dignissimos?
+              </p>
+              <p class="land-page-button">
+                <a href="#"> GET QUOTE </a>
+              </p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img
+              src="../src/assets/imgs/mazda_cx30_bg_image.png"
+              class="d-block w-100"
+              alt="mazda cx 30"
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h2>FIND YOUR MATCH</h2>
+              <p class="land-page-button">
+                <a href="#"> THE NEW MAZDA CX 30 </a>
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur<br />adipisicing elit.
+                Eaque, dignissimos?<br />
+                dipisicing elit. Eaque, dignissimos?
+              </p>
+              <p class="land-page-button">
+                <a href="#"> GET QUOTE </a>
+              </p>
+            </div>
           </div>
         </div>
-        <div class="carousel-item">
-          <img src="../src/assets/imgs/mazda_cx30_bg_image.png" class="d-block w-100" alt="mazda cx 30" />
-          <div class="carousel-caption d-none d-md-block">
-            <h2>FIND YOUR MATCH</h2>
-            <p class="land-page-button"><a href="#"> THE NEW MAZDA CX 30 </a></p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur<br />adipisicing elit.
-              Eaque, dignissimos?<br />
-              dipisicing elit. Eaque, dignissimos?
-            </p>
-            <p class="land-page-button">
-              <a href="#">
-                GET QUOTE
-              </a>
-            </p>
+        <a
+          class="carousel-control-prev"
+          href="#carouselExampleCaptions"
+          role="button"
+          data-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a
+          class="carousel-control-next"
+          href="#carouselExampleCaptions"
+          role="button"
+          data-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </section>
+    <section id="car-profile-section">
+      <div class="container">
+        <div class="cars-grid-list-nav">
+          <div class="type-cars-nav">
+            <a href=""
+              ><img src="../src/assets/imgs/saloon_car.jpg" alt=""
+            /></a>
+            <a href=""
+              ><img src="../src/assets/imgs/sport_utility_vehicle.jpg" alt=""
+            /></a>
+            <a href=""><img src="../src/assets/imgs/4by4.jpg" alt="" /></a>
+            <a href=""
+              ><img src="../src/assets/imgs/tractors_agric.jpg" alt=""
+            /></a>
+            <a href=""
+              ><img src="../src/assets/imgs/truck_commercial.jpg" alt=""
+            /></a>
+          </div>
+          <div class="sort-grid-list">
+            <div class="sortby-view">
+              <div class="sort-by">
+                <h5 class="text-center">SORT BY :</h5>
+                <ul>
+                  <li>
+                    <a href=""
+                      >DATE ADDED
+                      <img src="../src/assets/imgs/drop_down_icon.png" alt=""
+                    /></a>
+                    <!-- <ul id="submenu">
+                      <li><a href="">DATE 1</a></li>
+                      <li><a href="">DATE 2</a></li>
+                      <li><a href="">DATE 3</a></li>
+                    </ul> -->
+                  </li>
+                </ul>
+              </div>
+              <div class="view">
+                <h5 class="text-center">VIEW :</h5>
+                <ul>
+                  <li>
+                    <a href=""
+                      >10 PER PAGE
+                      <img src="../src/assets/imgs/drop_down_icon.png" alt=""
+                    /></a>
+                    <!-- <ul id="submenu">
+                      <li><a href="">DATE 1</a></li>
+                      <li><a href="">DATE 2</a></li>
+                      <li><a href="">DATE 3</a></li>
+                    </ul> -->
+                  </li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="grid-list">
+              <div class="grid">
+                <a href=""><img src="../src/assets/imgs/grid_view.jpg" alt=""></a>
+                
+              </div>
+              <div class="list">
+                <a href=""><img src="../src/assets/imgs/list-view.jpg" alt=""></a>
+                
+              </div>
+            </div>
           </div>
         </div>
-      </div>
-      <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-  </section>
-  <section id="car-profile-section">
-    <div class="container">
-      <div class="cars-grid-list-nav">
-        <div class="type-cars-nav">
-          <a href=""><img src="../src/assets/imgs/saloon_car.jpg" alt=""></a>
-          <a href=""><img src="../src/assets/imgs/sport_utility_vehicle.jpg" alt=""></a>
-          <a href=""><img src="../src/assets/imgs/4by4.jpg" alt=""></a>
-          <a href=""><img src="../src/assets/imgs/tractors_agric.jpg" alt=""></a>
-          <a href=""><img src="../src/assets/imgs/truck_commercial.jpg" alt=""></a>
-        </div>
-        <div class="sort-grid-list">
-          sfffffffffffffff
+
+        <div class="aside-main">
+          <aside></aside>
+          <main></main>
         </div>
       </div>
-
-      <div class="aside-main">
-        <aside>
-
-        </aside>
-        <main>
-
-        </main>
-      </div>
-
-    </div>
-
-  </section>
-</body>
-
+    </section>
+  </body>
 </html>
