--- a/src/index.html
+++ b/src/index.html
@@ -1335,6 +1335,15 @@
                 </div>
               </div>
             </div>
+            <div class="pagination">
+                <a href="" class="img-class"><img src="../src/assets/imgs/previous-arrow.png" alt=""></a>
+                <a href="" class="sec" style="background-color: #ed1f1f;">1</a>
+                <a href="" class="sec">2</a>
+                <a href="" class="sec">3</a>
+                <a href="" class="sec">4</a>
+                <a href="" class="sec">5</a>
+                <a href=""  class="img-class"><img src="../src/assets/imgs/next.png" alt=""></a>
+              </div>
           </main>
         </div>
       </div>
